# Elrond-2.0

./: .dockerignore  .env.docker  .gitignore  Dockerfile  README.md  data.json  db.sqlite3  docker-compose.yml  manage.py  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js  yep.html
articles/: admin.py  managers.py  models.py  urls.py  views.py
articles/migrations/: 0001_initial.py  0002_creat_suoeruser.py  0003_article_creator.py  0004_alter_article_options_alter_article_content_and_more.py  0005_alter_userprofile_managers_alter_userprofile_email.py  0006_remove_userprofile_username_alter_article_word_count_and_more.py
elrond/: asgi.py  settings.py  urls.py  wsgi.py
locale/fa/LC_MESSAGES/: django.mo  django.po
static/: input.css  output.css
templates/: base.html
templates/account/: login.html  signup.html
templates/allauth/elements/: button.html  field.html  form.html  h1.html  h2.html  provider.html
templates/allauth/layouts/: base.html
templates/articles/: article_create.html  article_delete.html  article_update.html  base.html  home.html
templates/articles/layouts/: base_form.html
templates/registration/: login.html
