[project]
name = "elrond"
version = "0.1.0"
description = ""
authors = [
    {name = "Reyhanishere",email = "reyhaneh.parviziyan@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django-allauth[socialaccount] (>=65.8.0,<66.0.0)",
    "psycopg (>=3.2.9,<4.0.0)"
]

[tool.poetry]
packages = [{include = "elrond", from = "src"}]

[tool.poetry.dependencies]

django = "^5.0.1"

[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^5.2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"